fix(tournament): fixed tournament game generation and pagination logic again